--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,10 @@ body {
 .link {
     text-decoration: none;
 }
+h1,h2,h3,p,ul {
+    margin: 0;
+    padding: 0;
+}
 .page-header {
     background-color: var(--pure-white);
 }
@@ -64,11 +68,34 @@ body {
 .contact-mail:focus {
     color: var(--primary-brand);
 }
+.container {
+    width: 1158px;
+    margin-right: auto;
+    margin-left: auto;
+    outline: 2px solid red;
+}
+.section {
+    /* padding-top: 120px; */
+    padding-bottom: 120px;
+}
+.section-work {
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
+.section-app {
+    padding-bottom: 120px;
+}
+.section-team {
+    background-color: var(--light);
+    padding-bottom: 120px;
+}
 
 .hero {
-    background-color: var(--dark);  
+    background-color: var(--dark);
+    padding-bottom: 120px;
   }
 .hero-title {
+    margin-bottom: 48px;
     color: var(--pure-white);
     font-weight: 500;
     font-size: 56px;
@@ -78,6 +105,13 @@ body {
   }
 
 .btn {
+    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+    min-width: 69px;
+    border-radius: 4px;
+    border: 1px solid transparent;
+    padding: 16px 32px;
     color: var(--primary-brand);
     font-family: 'Roboto', sans-serif;
     background-color: var(--accent);
@@ -88,8 +122,32 @@ body {
     align-items: center;
     letter-spacing: 0.04em;
     cursor: pointer;
+    text-align: center;
 }
 .btn:active {
+    background-color: var(--primary-brand);
+    color: var(--pure-white);
+}
+.btn-filter {
+    display: inline-block;
+    min-width: 69px;
+    border-radius: 4px;
+    border: 1px solid;
+    border-color: var(--accent);
+    padding: 12px 24px;
+    color: var(--primary-brand);
+    font-family: 'Roboto', sans-serif;
+    background-color: var(--light);
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.19;
+    display: flex;
+    align-items: center;
+    letter-spacing: 0.04em;
+    cursor: pointer;
+    text-align: center;  
+}
+.btn-filter:active {
     background-color: var(--primary-brand);
     color: var(--pure-white);
 }
@@ -107,6 +165,7 @@ body {
 }
 
 .works-title {
+    margin-bottom: 8px;
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
@@ -134,9 +193,7 @@ body {
     letter-spacing: 0.02em;
     color: var(--text-col);
 }
-.section-team {
-    background-color: var(--light);
-}
+
 .page-footer {
     background-color: var(--dark);
 }
