--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,9 @@ h1,h2,h3,p,ul {
     margin-top: 24px;
     margin-right: 77px;
     margin-bottom: 24px;
+
     color: var(--primary-brand);
+
     font-family: 'Raleway';
     font-weight: 800;
     font-size: 18px;
@@ -48,14 +50,24 @@ h1,h2,h3,p,ul {
     display: flex;
 }
 .menu-link {
+    padding-top: 24px;
+    padding-bottom: 24px;
+    
     font-weight: 500;
     font-size: 16px;
     line-height: 24px;
     letter-spacing: 1.5;
     color: var(--dark);
 }
+.menu-item:not(:last-child) {
+    margin-right: 40px;
+}
+/* .menu-item + .menu-item {
+    margin-left: 20px;
+} */
 .menu-contacts {
     display: flex;
+    margin-left: auto;
 }
 .menu-link:active {
     color: var(--primary-brand);
@@ -71,6 +83,8 @@ h1,h2,h3,p,ul {
     color: var(--primary-brand)
 }
 .contact-mail {
+    margin-left: auto;
+
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
@@ -82,15 +96,18 @@ h1,h2,h3,p,ul {
 }
 .container {
     width: 1158px;
+    padding-left: 15px;
+    padding-right: 15px;
     margin-right: auto;
     margin-left: auto;
+
     outline: 2px solid red;
 }
 .con-header {
     display: flex;
     align-items: center;
-    /* justify-content: space-around; */
 }
+
 .section {
     /* padding-top: 120px; */
     padding-bottom: 120px;
@@ -114,6 +131,7 @@ h1,h2,h3,p,ul {
 .hero-title {
     padding-top: 192px;
     margin-bottom: 48px;
+
     color: var(--pure-white);
     font-weight: 500;
     font-size: 56px;
@@ -130,6 +148,7 @@ h1,h2,h3,p,ul {
     border-radius: 4px;
     border: 1px solid transparent;
     padding: 16px 32px;
+
     color: var(--primary-brand);
     font-family: 'Roboto', sans-serif;
     background-color: var(--accent);
@@ -153,6 +172,7 @@ h1,h2,h3,p,ul {
     border: 1px solid;
     border-color: var(--accent);
     padding: 12px 24px;
+
     color: var(--primary-brand);
     font-family: 'Roboto', sans-serif;
     background-color: var(--light);
@@ -174,6 +194,8 @@ h1,h2,h3,p,ul {
 }
 .secondary-title {
     margin-bottom: 72px;
+    padding-top: 120px;
+
     font-weight: 500;
     font-size: 36px;
     line-height: 1.33;
@@ -194,6 +216,7 @@ h1,h2,h3,p,ul {
 
 .works-title {
     margin-bottom: 8px;
+
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
@@ -202,6 +225,7 @@ h1,h2,h3,p,ul {
 }
 .team-title {
     margin-bottom: 8px;
+
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
@@ -228,6 +252,7 @@ h1,h2,h3,p,ul {
 }
 .logo-footer {
     margin-bottom: 16px;
+
     font-family: 'Raleway';
     font-weight: 800;
     font-size: 18px;
@@ -257,6 +282,7 @@ h1,h2,h3,p,ul {
 }
 .title-list-works {
     margin-bottom: 8px;
+    
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
@@ -275,12 +301,9 @@ h1,h2,h3,p,ul {
 }
 .filter-btn {
     display: flex;
+    justify-content: center;
 }
-/* .container-filter-btn {
-    width: 1158px;
-    margin-top: 96px;
-    margin-right: auto;
-    margin-left: auto;
-    outline: 2px solid red;
-} */
+.filter-btn-item:not(:last-child) {
+    margin-right: 24px;
+}
 
