--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,9 @@ h1,h2,h3,p,ul {
 }
 .page-header {
     background-color: var(--pure-white);
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 
+    0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .logo {
     margin-top: 24px;
@@ -101,7 +104,7 @@ h1,h2,h3,p,ul {
     margin-right: auto;
     margin-left: auto;
 
-    outline: 2px solid red;
+    /* outline: 2px solid red; */
 }
 .con-header {
     display: flex;
@@ -205,12 +208,18 @@ h1,h2,h3,p,ul {
 }
 .works-list {
     display: flex;
+    justify-content: space-between;
+}
+.text-block {
+    width: 264px;
 }
 .apps-list {
     display: flex;
+    justify-content: space-between;
 }
 .team-list {
     display: flex;
+    justify-content: space-between;
 }
 
 .works-title {
@@ -248,6 +257,8 @@ h1,h2,h3,p,ul {
 
 .page-footer {
     background-color: var(--dark);
+    padding-top: 100px;
+    padding-bottom: 100px;
 }
 .logo-footer {
     margin-bottom: 16px;
@@ -312,6 +323,8 @@ h1,h2,h3,p,ul {
     gap: 24px;
     flex-basis: calc((100%-48px)/3);
     margin-bottom: 32px;
+    border-bottom: 0.5px solid;
+    border-color: var(--light);
 }
 .list-works-item:nth-child(3n) {
     margin-right: 0;
@@ -323,7 +336,7 @@ h1,h2,h3,p,ul {
     display: block;
     margin-bottom: 32px;
 }
-.img-index {
+.img-app {
     display: block;
 }
 
