--- a/css/styles.css
+++ b/css/styles.css
@@ -138,8 +138,8 @@ h1,h2,h3,p,ul {
 
 .hero {
     background-color: var(--dark);
-    padding-bottom: 120px;
-    padding-top: 120px;
+    padding-bottom: 192px;
+    padding-top: 192px;
   }
 .hero-title {
     /* padding-top: 192px; */
@@ -371,8 +371,10 @@ h1,h2,h3,p,ul {
     color: var(--text-col);
 }
 .container-works-item {
-    padding-top: 32px;
-    padding-bottom: 32px;
+    padding: 32px 16px;
     border-bottom: 0.5px solid;
+    border-right: 0.5px solid;
+    border-left: 0.5px solid;
+
     border-color: var(--light);
 }
