--- a/css/styles.css
+++ b/css/styles.css
@@ -336,7 +336,8 @@ h1,h2,h3,p,ul {
     margin-top: 72px;
     display: flex;
     flex-wrap: wrap;
-    gap: 24px;
+    row-gap: 48px;
+    column-gap: 24px;
     flex-basis: calc((100% - 48px)/3);
 }
 .list-works-item {
